Added deleteAll endpoint
