# src/routes.ts
@@ -8,7 +8,9 @@ const routes = Router();
 routes.get("/word", WordController.find);
 routes.get("/word/:wordName/language/:languageId", WordController.findByWordAndLanguage);
 routes.post("/word", BasicAuthentication, WordController.create);
-routes.delete("/word", BasicAuthentication, WordController.deleteByWordAndLanguage);
+routes.delete("/word/:wordName/language/:languageId", BasicAuthentication, WordController.deleteByWordAndLanguage);
+routes.delete("/word", BasicAuthentication, WordController.deleteAll);
+
 routes.get("/language", LanguageController.find);
 
 export default routes;
